<resources>
    <string name="Hot">Hot</string>
    <string name="New">New</string>
    <string name="Prompt">Prompt</string>
    <string name="closed_conversation">Closed Conversation</string>
    <string name="you_ended_the_conversation">You ended the conversation</string>
    <string name="your_partner_ended_the_conversation">The other user ended the conversation</string>
    <string name="one_of_the_users_ended_the_conversation">One of the users ended\nthe conversation</string>
    <string name="now_talking_text_viewer">Conversation between two users</string>
    <string name="now_talking_text_participant">You are talking with someone near you</string>
    <string name="now_viewing_text_participant">Conversation you were in</string>
    <string name="start_conversation">Start a conversation\n</string>
    <string name="stop_searching">Searching\nNearby</string>
    <string name="Send">Send</string>
    <string name="Message">Message</string>
    <string name="view">view</string>
    <string name="Gotcha">Gotcha</string>
    <string name="Title">Title</string>
    <string name="confirm_end_conversation_title">End Conversation?</string>
    <string name="confirm_end_conversation_body">Are you sure you want to end this conversation?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Menu">Menu</string>
    <string name="my_conversations">My Conversations</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions_body"><![CDATA[
    Please read these Terms and Conditions ("Terms", "Terms and Conditions") carefully before using Rivet operated by Rivet LLC.
<br />
<br />Your access to and use of Rivet is conditioned on your acceptance of and compliance with these Terms. These Terms apply to all visitors, users and others who access or use Rivet.
<br />
<br />By accessing or using Rivet you agree to be bound by these Terms. If you disagree with any part of the terms then you may not use Rivet.
<br />
<br /><u>Termination</u>
<br />We may terminate or suspend access to Rivet immediately, without prior notice or liability, for any reason whatsoever, including without limitation if you breach the Terms.
<br />
<br />All provisions of the Terms which by their nature should survive termination shall survive termination, including, without limitation, ownership provisions, warranty disclaimers, indemnity and limitations of liability.
<br />
<br /><u>Links To Other Web Sites</u>
<br />Rivet may contain links to third-­party web sites or services that are not owned or controlled by Rivet LLC.
<br />
<br />Rivet LLC has no control over, and assumes no responsibility for, the content, privacy policies, or practices of any third party web sites or services. You further acknowledge and agree that Rivet LLC shall not be responsible or liable, directly or indirectly, for any damage or loss caused or alleged to be caused by or in connection with use of or reliance on any such content, goods or services available on or through any such web sites or services.
<br />
<br />We strongly advise you to read the terms and conditions and privacy policies of any third-­party web sites or services that you visit.
<br />
<br /><u>Governing Law</u>
<br />These Terms shall be governed and construed in accordance with the laws of The United States of America without regard to its conflict of law provisions.
<br />
<br />Our failure to enforce any right or provision of these Terms will not be considered a waiver of those rights. If any provision of these Terms is held to be invalid or unenforceable by a court, the remaining provisions of these Terms will remain in effect. These Terms constitute the entire agreement between us regarding Rivet, and supersede and replace any prior agreements we might have between us regarding Rivet.
<br />
<br /><u>Changes</u>
<br />We reserve the right, at our sole discretion, to modify or replace these Terms at any time. If a revision is material we will try to provide at least 30 days notice prior to any new terms taking effect. What constitutes a material change will be determined at our sole discretion.
<br />
<br />By continuing to access or use our Service after those revisions become effective, you agree to be bound by the revised terms. If you do not agree to the new terms, please stop using Rivet.
<br />
<br /><u>Unauthorized Activities</u>
<br />When using the Rivet, you agree not to:
<br />
<br />&nbsp;&nbsp;&nbsp;&nbsp;* Harass, abuse, threaten, defame, or otherwise violate the legal rights (such as rights of privacy and publicity) of others.
<br />&nbsp;&nbsp;&nbsp;&nbsp;* Use racially, religiously, or sexuality offensive language.
<br />&nbsp;&nbsp;&nbsp;&nbsp;* Promote or encourage illegal activities
<br />&nbsp;&nbsp;&nbsp;&nbsp;* Post anything that may exploit minors.
<br />&nbsp;&nbsp;&nbsp;&nbsp;* Post any copyrighted or trademarked materials without the express consent of the owner.
<br />&nbsp;&nbsp;&nbsp;&nbsp;* Solicit any unauthorized advertising materials, including, but not limited to: spam, junk mail, false services, pyramid schemes, or any other generally accepted unauthorized advertising materials.
<br />&nbsp;&nbsp;&nbsp;&nbsp;* Use any automated means to access or use Rivet. This includes, but is not limited to: robots, scrapers, and spiders.
<br />&nbsp;&nbsp;&nbsp;&nbsp;* Maliciously and/or deliberately impose an unreasonable load on our infrastructure.
<br />&nbsp;&nbsp;&nbsp;&nbsp;* Post any language that is obscene, threatening, or derogatory to any individual or group.
<br />
<br />This list of prohibitions merely provides some examples and is not intended to be nor taken to be exhaustive or exclusive.  We reserve the right to terminate access to your account and/or refuse, delete or remove any content which you submit; with or without cause and with or without notice, for any reason. We may also terminate access to Rivet if any action is found to be disruptive to Rivet or any of its users.  We reserve the right to report any illegal or unlawful behaviors or actions to applicable law enforcement.
<br />
<br /><u>Copyright Policy</u>
<br />
<br />Rivet LLC respects the intellectual property of other individuals, organizations, and companies. If you believe that any of your copyrighted material exists in any way in Rivet, please let us know by emailing us at the email address listed at the bottom of the Terms with the subject line “Copyright Infringement Inquiry”. Providing us with as much evidence and information as possible will help resolve the issue in the timeliest manner. Such evidence and information may include:
<br />&nbsp;&nbsp;&nbsp;&nbsp;* What content you believe to be in violation of your copyright and how it is being used
<br />&nbsp;&nbsp;&nbsp;&nbsp;* A statement encouraging/advocating your ownership of the copyrighted material
<br />&nbsp;&nbsp;&nbsp;&nbsp;* Reasonably sufficient proof of your identity as the owner of the material
<br />&nbsp;&nbsp;&nbsp;&nbsp;* A way for us to contact you quickly (email, phone, address)
<br />
<br />While we will try our best to respond to any copyright infringement inquiries as fast as possible, please understand that a respectable amount of time might be needed in order for our staff to evaluate the inquiry and respond accordingly. We will try to respond within three (3) business days, however, certain circumstances may change this response time, in which case we are held liable for the delay.
<br />
<br /><u>Contact Us</u>
<br />If you have any questions about these Terms, please contact us.
<br />
<br />http://jumpintorivet.com
<br />
<br />info@jumpintorivet.com
<br />
<br />Last updated: 8/3/15]]></string>
    <string name="reset_tutorial">Reset Tutorial</string>
    <string name="you_have_not_been_in_any_conversations">You haven’t been in any conversations yet</string>
    <string name="loading_conversations">Loading Conversations</string>
    <string name="your_prompt">Your prompt:</string>
    <string name="conversations">Conversations:</string>
    <string name="prompt_colon">Prompt:</string>
    <string name="time_ago_minute">%d min</string>
    <string name="time_ago_seconds">%d sec</string>
    <string name="time_ago_hour">%d hr</string>
    <string name="time_ago_day">%d day</string>
    <string name="time_ago_days">%d days</string>
    <string name="time_ago_weeks">%d wks</string>
    <string name="time_ago_week">%d wk</string>
    <string name="time_ago_months">%d mo</string>
    <string name="time_ago_years">%d yrs</string>
    <string name="time_ago_year">%d yr</string>
    <string name="time_ago_hours">%d hrs</string>
    <string name="number_of_messages">%d messages</string>
    <string name="number_of_message">%d message</string>
    <string name="Submit">Submit</string>
    <string name="start_your_own_conversation">Start your own\nconversation!</string>
    <string name="tap_the_button">Tap the\nbutton</string>
    <string name="tap_conversation_text">Tap to view a conversation\nbetween two people near you</string>
    <string name="slid_privacy_mask_left_text">Messages here are private</string>
    <string name="received_private_message_tutorial">You received a private message.\nSlide the privacy mask tab.</string>
    <string name="report_problem">Report Problem</string>
    <string name="tell_us_the_problem">Tell us what the problem is.</string>
    <string name="inappropriate_messages">Inappropriate Messages</string>
    <string name="targets_someone">Targets Someone</string>
    <string name="Other">Other</string>
    <string name="Cancel">Cancel</string>
    <string name="Success">Success!</string>
    <string name="report_successfully_filed">Thank you! Your report has been successfully filed. One of our admins will take a look at it soon.</string>
    <string name="no_conversations_around_you">No conversations have happened near you yet. Sorry!</string>
    <string name="no_featured_conversations_around_you">There aren’t any featured conversations near you.</string>
    <string name="no_featured_conversations_global">There aren’t any featured conversations to show.</string>
    <string name="Loading">Loading</string>
    <string name="share_with_friends_text">Looking for a new social app? Jump into Rivet! http://share.jumpintorivet.com</string>
    <string name="error_updating_location">Error Finding Your Location</string>
    <string name="share_with_friends">Share with Friends</string>
    <string name="contact_us_support">Contact Us/Support</string>
    <string name="jump_into_rivet">Jump Into Rivet</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="special_thanks">Special Thanks</string>
    <string name="a_special_thanks">A Special Thanks!</string>
    <string name="special_thanks_list"><![CDATA[
John O’Brien
\nAdam Kaller
\nThe Veloso Family
\nGRB
\nThe Grinstead Family
\nLance Hasson
\nJeff Nelson
\nMike Drapeau
\nJohn Rigney
\nMichelle Hutcherson
\n@brewtheway
\nThank you, O Captain, my Captain- her most royal and creative - Gita Khote
\nRebecca H
\nMama Opal
\nMelissa Fleming
\nRAHUL
\nEric Carboni
\nChocolate Bear
\nDavid Bugliari
\nBryan M. Wilson
\nLorene Garnier
\nJanel Bersabal
\nParthoo (4F For Life)
\nCory Wacht (Ginger Bear)
\nElaine Johnson
\nCandy Danforth
\nRem Tolentino
\nWayne Lu
\nJoshua King
\nLuke Alexander
\nBcouch
\nAlvin Mui]]></string>
    <string name="like_on_facebook">Like on Facebook</string>
    <string name="follow_on_twitter">Follow on Twitter</string>
    <string name="follow_on_instagram">Follow on Instagram</string>
    <string name="rate_on_the_play_store">Rate on the Play Store</string>
    <string name="social_media">Social Media</string>
    <string name="jump_in">Jump In</string>
    <string name="legal">Legal</string>
</resources>